# IoT-greenhouse

./: .dockerignore  .env.example  .env.local  .gitignore  MIGRATION_NOTES.md  Makefile  QUICKSTART.md  README.md  RESET.md  SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  setup.sh  simple_mqtt_test.sh  test_ci_health_check.sh
.github/: CI_DOCUMENTATION.md
.github/workflows/: ci.yml
ESP32/: README.md  SETPOINTS_WEBSERVER.md  WEBSERVER_AP_MODE.md  platformio.ini
ESP32/src/: config.h  constants.h  main.cpp
api/: .dockerignore  DATABASE_SELECTION.md  Dockerfile  README.md  app.py  package-lock.json  package.json  requirements.txt  server.js  test_api.py  test_db_connection.py  test_with_testdb.sh  wsgi.py
api/routes/: authDbRoutes.js  authMiddleware.js  greenhouseDbRoutes.js  plantsDbRoutes.js
api/services/: dbService.js  mqttService.js  postgresDbService.js
api/src/: __init__.py  app.py  (+6 more)
consumer/: .dockerignore  Cargo.toml  DEVELOPMENT_SUMMARY.md  Dockerfile  QUICK_REFERENCE.md  README.md  TESTING.md  test_consumer.sh  test_consumer_ci.sh  test_consumer_edge_cases.sh
consumer/src/: config.rs  db.rs  lib.rs  main.rs  models.rs
data/: greenhouses.json
docs/: API.md  CI_PIPELINE.md  DATABASE.md  ESP32.md  MQTT_TESTING_GUIDE.md  SETUP.md  ci-pipeline.md  database.md  setup.md
esp32/: README.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend.old_structure/: .dockerignore  README.md
mosquitto/: Dockerfile
(+75 files in other folders)
